force-app/main/default/objects/Work_Order__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look-up field to Opportunity/Job object</description>
    <label>Job Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>