force-app/main/default/objects/Work_Order__c/fields/Other_Contact__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact__c</fullName>
    <label>Other Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>