force-app/main/default/objects/Work_Order__c/fields/Other_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_Phone__c</fullName>
    <label>Other Contact Phone</label>
    <type>Phone</type>
</CustomField>