force-app/main/default/objects/Work_Order__c/fields/Overtime_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime Allowed</label>
    <type>Checkbox</type>
</CustomField>