force-app/main/default/objects/Work_Order__c/fields/Pack_Out__c.field-meta.xml
<CustomField>
    <fullName>Pack_Out__c</fullName>
    <label>Pack Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>Washer/Dryer</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>