force-app/main/default/objects/Work_Order__c/fields/Patient_Area__c.field-meta.xml
<CustomField>
    <fullName>Patient_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Area</label>
    <type>Checkbox</type>
</CustomField>