force-app/main/default/objects/Work_Order__c/fields/Phase_Number__c.field-meta.xml
<CustomField>
    <fullName>Phase_Number__c</fullName>
    <label>Phase Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>