force-app/main/default/objects/Work_Order__c/fields/Pick_Up_Check_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Check_On_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pick Up Check On Site</label>
    <type>Checkbox</type>
</CustomField>