force-app/main/default/objects/Work_Order__c/fields/Power_Water_Available__c.field-meta.xml
<CustomField>
    <fullName>Power_Water_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power/Water Available</label>
    <type>Checkbox</type>
</CustomField>