force-app/main/default/objects/Work_Order__c/fields/PPE__c.field-meta.xml
<CustomField>
    <fullName>PPE__c</fullName>
    <inlineHelpText>Personal Protective Equipment</inlineHelpText>
    <label>PPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Hat</fullName>
            </value>
            <value>
                <fullName>Safety Vests</fullName>
            </value>
            <value>
                <fullName>Safety Glasses</fullName>
            </value>
            <value>
                <fullName>Ear Protection</fullName>
            </value>
            <value>
                <fullName>Coveralls</fullName>
            </value>
            <value>
                <fullName>Facemasks</fullName>
            </value>
            <value>
                <fullName>Shoe Covers</fullName>
            </value>
            <value>
                <fullName>Gloves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>