force-app/main/default/objects/Work_Order__c/fields/Premium_Filter__c.field-meta.xml
<CustomField>
    <fullName>Premium_Filter__c</fullName>
    <label>Premium Filter - Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>