force-app/main/default/objects/Work_Order__c/fields/Pressure_Differential__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Differential__c</fullName>
    <label>Pressure Differential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-0.02</fullName>
            </value>
            <value>
                <fullName>-0.01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>