force-app/main/default/objects/Work_Order__c/fields/Project_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Project_Contact_Information__c</fullName>
    <label>Project Contact Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>