force-app/main/default/objects/Work_Order__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <description>Formula field to populate Project Manager from Job record</description>
    <formula>ATI_Job__r.Project_Manager__r.FirstName &amp; &quot; &quot; &amp;  ATI_Job__r.Project_Manager__r.LastName</formula>
    <label>Project Director</label>
    <type>Text</type>
</CustomField>