force-app/main/default/objects/Work_Order__c/fields/Project_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Contact__c</fullName>
    <description>Formula field to populate the Project Site Contact Name from the Job record</description>
    <formula>ATI_Job__r.Project_Site_Contact_Name__r.FirstName &amp; &apos; &apos; &amp;  ATI_Job__r.Project_Site_Contact_Name__r.LastName</formula>
    <label>Project Site Contact</label>
    <type>Text</type>
</CustomField>