force-app/main/default/objects/Work_Order__c/fields/Projected_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Projected_Number_of_Days__c</fullName>
    <label>Projected Number of Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>