force-app/main/default/objects/Work_Order__c/fields/Property_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Property_Occupied__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the property is currently occupied.</inlineHelpText>
    <label>Property Occupied</label>
    <type>Checkbox</type>
</CustomField>