force-app/main/default/objects/Work_Order__c/fields/Removal_Height__c.field-meta.xml
<CustomField>
    <fullName>Removal_Height__c</fullName>
    <label>Removal Height</label>
    <length>100</length>
    <type>Text</type>
</CustomField>