force-app/main/default/objects/Work_Order__c/fields/Removal_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Removal_Man_Hours__c</fullName>
    <label>Removal Man Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>