force-app/main/default/objects/Work_Order__c/fields/Renovation_Site__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renovation Site</label>
    <type>Checkbox</type>
</CustomField>