force-app/main/default/objects/Work_Order__c/fields/Requested_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Start_Date_Time__c</fullName>
    <label>Requested Start Date/Time</label>
    <type>DateTime</type>
</CustomField>