force-app/main/default/objects/Work_Order__c/fields/Special_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Special_Equipment__c</fullName>
    <label>Special Equipment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>