force-app/main/default/objects/Work_Order__c/fields/Standard_Filter__c.field-meta.xml
<CustomField>
    <fullName>Standard_Filter__c</fullName>
    <label>Standard Filter - Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>