force-app/main/default/objects/Work_Order__c/fields/Submitted_for_Approval_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval_By__c</fullName>
    <label>Submitted for Approval By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>