force-app/main/default/objects/Work_Order__c/fields/Substrate__c.field-meta.xml
<CustomField>
    <fullName>Substrate__c</fullName>
    <label>Substrate</label>
    <length>25</length>
    <type>Text</type>
</CustomField>