force-app/main/default/objects/Work_Order__c/fields/Supervisor_Man_Days__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Man_Days__c</fullName>
    <formula>Number_of_Work_Days_to_Complete__c  *  Supervisors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Man Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>