force-app/main/default/objects/Work_Order__c/fields/Supervisors__c.field-meta.xml
<CustomField>
    <fullName>Supervisors__c</fullName>
    <label>Supervisors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>