force-app/main/default/objects/Work_Order__c/fields/Supervisors_Male__c.field-meta.xml
<CustomField>
    <fullName>Supervisors_Male__c</fullName>
    <label>Supervisors - Male</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>