force-app/main/default/objects/Work_Order__c/fields/Supply_Coveralls__c.field-meta.xml
<CustomField>
    <fullName>Supply_Coveralls__c</fullName>
    <label>Supply Coveralls - Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>