force-app/main/default/objects/Work_Order__c/fields/Supply_Facemasks__c.field-meta.xml
<CustomField>
    <fullName>Supply_Facemasks__c</fullName>
    <label>Supply Facemasks - Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>