force-app/main/default/objects/Work_Order__c/fields/Supply_Gloves__c.field-meta.xml
<CustomField>
    <fullName>Supply_Gloves__c</fullName>
    <label>Supply Gloves - Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>