force-app/main/default/objects/Work_Order__c/fields/Supply_Shoe_Covers__c.field-meta.xml
<CustomField>
    <fullName>Supply_Shoe_Covers__c</fullName>
    <label>Supply Shoe Covers - Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>