force-app/main/default/objects/Work_Order__c/fields/Survey_Available__c.field-meta.xml
<CustomField>
    <fullName>Survey_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Available</label>
    <type>Checkbox</type>
</CustomField>