force-app/main/default/objects/Work_Order__c/fields/T_M__c.field-meta.xml
<CustomField>
    <fullName>T_M__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T&amp;M</label>
    <type>Checkbox</type>
</CustomField>