force-app/main/default/objects/Work_Order__c/fields/Technicians__c.field-meta.xml
<CustomField>
    <fullName>Technicians__c</fullName>
    <label>Technicians</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>