force-app/main/default/objects/Work_Order__c/fields/Total_Loss_Items_To_Be_Left_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Total_Loss_Items_To_Be_Left_Onsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Total Loss Items To Be Left Onsite</label>
    <type>Checkbox</type>
</CustomField>