force-app/main/default/objects/Work_Order__c/fields/Unit_Apt__c.field-meta.xml
<CustomField>
    <fullName>Unit_Apt__c</fullName>
    <formula>ATI_Job__r.Project_Site_Address_2__c</formula>
    <label>Unit/Apt</label>
    <type>Text</type>
</CustomField>