force-app/main/default/objects/Work_Order__c/fields/Vaulted_Ceilings__c.field-meta.xml
<CustomField>
    <fullName>Vaulted_Ceilings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vaulted Ceilings</label>
    <type>Checkbox</type>
</CustomField>