force-app/main/default/objects/Work_Order__c/fields/Wet_Decon__c.field-meta.xml
<CustomField>
    <fullName>Wet_Decon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wet Decon</label>
    <type>Checkbox</type>
</CustomField>