force-app/main/default/objects/Work_Order__c/fields/Work_Order_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional approvers of work order besides Ops Manager-- fed by Office record via Process Builder Flow &apos;Work Order Approver 2&apos;</description>
    <label>Work Order Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>