force-app/main/default/objects/Work_Order__c/fields/Work_order_Approver__c.field-meta.xml
<CustomField>
    <fullName>Work_order_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional approvers of work orders besides Ops manager-- fed by Office record via Process Builder Flow &apos;Work Order Approver&apos;</description>
    <label>Work order Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>