force-app/main/default/objects/Work_Order__c/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Infection Control</fullName>
            </value>
            <value>
                <fullName>HVAC Systems</fullName>
            </value>
            <value>
                <fullName>Emergency Services</fullName>
            </value>
            <value>
                <fullName>Reconstruction</fullName>
            </value>
            <value>
                <fullName>Asbestos</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Mold</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>