force-app/main/default/objects/Work_Order__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Formula field to populate the Work Phone from the Job record</description>
    <formula>ATI_Job__r.Work_Phone__c</formula>
    <label>Work Phone</label>
    <type>Text</type>
</CustomField>