force-app/main/default/objects/Work_Order__c/fields/Year_Structure_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Structure_Built__c</fullName>
    <formula>TEXT(ATI_Job__r.Year_Structure_Built__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Structure Built</label>
    <type>Text</type>
</CustomField>