force-app/main/default/objects/Work_Order__c/recordTypes/Construction_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Construction_Work_Order</fullName>
    <active>true</active>
    <label>Construction Work Order</label>
</RecordType>