force-app/main/default/objects/Work_Order__c/recordTypes/Environmental_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Environmental_Work_Order</fullName>
    <active>true</active>
    <label>Environmental Work Order</label>
</RecordType>