force-app/main/default/objects/Work_Order__c/recordTypes/Healthcare_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Work_Order</fullName>
    <active>true</active>
    <label>Healthcare Work Order</label>
</RecordType>