force-app/main/default/objects/Work_Order__c/recordTypes/Marketing_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Work_Order</fullName>
    <active>true</active>
    <label>Marketing Work Order</label>
</RecordType>