force-app/main/default/objects/Work_Order__c/recordTypes/Restoration_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Restoration_Work_Order</fullName>
    <active>true</active>
    <label>Restoration Work Order</label>
</RecordType>