force-app/main/default/objects/Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Office3__c</columns>
    <columns>Division__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Submitted_for_Approval_By__c</columns>
    <columns>Approved_By__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>