force-app/main/default/objects/Work_Order__c/listViews/All_RIV_Work_Orders.listView-meta.xml
<ListView>
    <fullName>All_RIV_Work_Orders</fullName>
    <columns>Project_Manager__c</columns>
    <columns>NAME</columns>
    <columns>Job_Address__c</columns>
    <columns>Project_Site_Contact__c</columns>
    <columns>Work_Description__c</columns>
    <columns>Operations_Manager__c</columns>
    <columns>Approved_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office2__c</field>
        <operation>equals</operation>
        <value>Riverside</value>
    </filters>
    <label>All RIV_Work Orders</label>
    <sharedTo>
        <group>Riverside</group>
        <group>Riverside_Asbestos</group>
        <group>Riverside_Contents</group>
    </sharedTo>
</ListView>