force-app/main/default/objects/Work_Order__c/listViews/Approved_Work_Orders_Awaiting_Assignment.listView-meta.xml
<ListView>
    <fullName>Approved_Work_Orders_Awaiting_Assignment</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Division__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Requested_Start_Date_Time__c</columns>
    <columns>Approved_By__c</columns>
    <columns>Date_Time_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Date_Time_Approved__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Approved Work Orders Awaiting Assignment</label>
</ListView>