force-app/main/default/objects/Work_Order__c/listViews/New_Work_Orders_Awaiting_Submittal.listView-meta.xml
<ListView>
    <fullName>New_Work_Orders_Awaiting_Submittal</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Division__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Requested_Start_Date_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Time_Submitted_for_Approval__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Work_Order__c.Construction_Work_Order</value>
    </filters>
    <label>New Work Orders Awaiting Submittal</label>
</ListView>