force-app/main/default/objects/Work_Order__c/listViews/Ops_Manager_San_Francisco_Work_Order.listView-meta.xml
<ListView>
    <fullName>Ops_Manager_San_Francisco_Work_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Ops Manager - San Francisco</label>
    <queue>Ops_Manager_San_Francisco</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>