force-app/main/default/objects/Work_Order__c/listViews/Ops_Managers_Corp_Env_Work_Order.listView-meta.xml
<ListView>
    <fullName>Ops_Managers_Corp_Env_Work_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Ops Managers - Corp Env</label>
    <queue>Ops_Managers_Corp_Env</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>