force-app/main/default/objects/Work_Order__c/listViews/Renee_M_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Renee_M_Work_Orders</fullName>
    <columns>Project_Manager__c</columns>
    <columns>NAME</columns>
    <columns>Job_Address__c</columns>
    <columns>Project_Site_Contact__c</columns>
    <columns>Work_Description__c</columns>
    <columns>Operations_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office2__c</field>
        <operation>equals</operation>
        <value>Riverside</value>
    </filters>
    <filters>
        <field>Project_Manager__c</field>
        <operation>equals</operation>
        <value>renee mcfadden</value>
    </filters>
    <label>Renee M._Work Orders</label>
    <sharedTo>
        <group>Riverside</group>
    </sharedTo>
</ListView>