force-app/main/default/objects/Work_Order__c/listViews/RIV_Work_Orders_Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>RIV_Work_Orders_Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Division__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Requested_Start_Date_Time__c</columns>
    <columns>Office3__c</columns>
    <columns>Operations_Manager__c</columns>
    <columns>Submitted_for_Approval_By__c</columns>
    <columns>Approved_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Time_Submitted_for_Approval__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Date_Time_Approved__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Office2__c</field>
        <operation>equals</operation>
        <value>Riverside</value>
    </filters>
    <label>RIV - Work Orders Awaiting Approval</label>
    <sharedTo>
        <group>Riverside</group>
        <group>Riverside_Asbestos</group>
        <group>Riverside_Contents</group>
    </sharedTo>
</ListView>