force-app/main/default/objects/Work_Order__c/listViews/SF_Work_Orders_Awaiting_Submittal.listView-meta.xml
<ListView>
    <fullName>SF_Work_Orders_Awaiting_Submittal</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Division__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Requested_Start_Date_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Time_Submitted_for_Approval__c</field>
        <operation>equals</operation>
    </filters>
    <label>SF - Work Orders Awaiting Submittal</label>
</ListView>