force-app/main/default/objects/Work_Order__c/listViews/Submitted_Work_Orders_Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>Submitted_Work_Orders_Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Division__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Requested_Start_Date_Time__c</columns>
    <columns>Submitted_for_Approval_By__c</columns>
    <columns>Date_Time_Submitted_for_Approval__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Time_Submitted_for_Approval__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Date_Time_Approved__c</field>
        <operation>equals</operation>
    </filters>
    <label>Submitted Work Orders Awaiting Approval</label>
</ListView>